# mumble-rs

./: .gitignore  Cargo.toml  build.rs
proto/: mumble.proto
src/: channel.rs  common.rs  errors.rs  main.rs  mumble.rs  packet.rs  ping.rs  reject.rs  socket.rs  utils.rs
src/voice/: packet.rs
