[package]
name = "mumble-rs"
version = "0.1.0"
authors = ["Dimitri Apostal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]}
openssl = "0.10.32"
tokio-openssl = "0.6.1"
prost = { version = "0.7", features = ["prost-derive"] }

[build-dependencies]
prost-build = "0.7.0"